<resources>
    <string name="app_name">Foodmap App</string>
    <string name="info_products">Информация о продукте</string>
    <string name="info_recipies">Информация о рецепте</string>
    <string name="weight_products">Вес</string>
    <string name="olygos">Olygos</string>
    <string name="fructose">Fructose</string>
    <string name="polyols">Polyols</string>
    <string name="lactose">Lactose</string>
    <string name="gluten">Глютен</string>
    <string name="all_products">Все продукты</string>
    <string name="all_recipies">Все рецепты</string>
    <string name="selected_products">Мои продукты</string>
    <string name="selected_recipies">Мои рецепты</string>
    <string name="user_info">Профиль пользователя</string>
    <string name="my_notes">Мой дневник</string>
    <string name="archived_notes">Архивные заметки</string>
    <string name="notes_empty">Здесь пока ничего нет</string>
</resources>