<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/info_products" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/weight_products"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/olygos"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/fructose"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:padding="2dp"
            android:text="@string/polyols" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/lactose" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="Тест"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Olygos1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Fructose1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/Polyols1"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:padding="2dp" />

        <TextView
            android:id="@+id/Lactose1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp" />
    </TableRow>
</TableLayout>